objects/EUR_CRM_Competitor_Promo_Tracking__c.object
<CustomObject>
    <description>PR EUR Data Model</description>
    <fields>
        <fullName>EUR_CRM_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipName>Competitor_Promo_Trackings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Competitor_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>EUR CRM - Lookup to BQS</description>
        <label>Competitor Product</label>
        <referenceTo>EUR_CRM_Size__c</referenceTo>
        <relationshipName>Competitor_Promo_Trackings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Impact_to_PR_Brands__c</fullName>
        <label>Impact to PR Brands</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Note__c</fullName>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Promotion_Name__c</fullName>
        <label>Promotion Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Promotion_Type__c</fullName>
        <label>Promotion Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pallet Campaign</fullName>
                </value>
                <value>
                    <fullName>Display Campaign</fullName>
                </value>
                <value>
                    <fullName>Price reduction</fullName>
                </value>
                <value>
                    <fullName>Additional Free Goods</fullName>
                </value>
                <value>
                    <fullName>Brand activation campaign</fullName>
                </value>
                <value>
                    <fullName>Gift on Pack</fullName>
                </value>
                <value>
                    <fullName>Special Packaging Tin</fullName>
                </value>
                <value>
                    <fullName>Scratch/SMS &amp; Win</fullName>
                </value>
                <value>
                    <fullName>Instore Draw</fullName>
                </value>
                <value>
                    <fullName>SMS Campaign</fullName>
                </value>
                <value>
                    <fullName>Lucky Draw</fullName>
                </value>
                <value>
                    <fullName>Value add</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Tastings</fullName>
                </value>
                <value>
                    <fullName>Scartch cards</fullName>
                </value>
                <value>
                    <fullName>Promotion Girls</fullName>
                </value>
                <value>
                    <fullName>Combo Deal</fullName>
                </value>
                <value>
                    <fullName>VAP</fullName>
                </value>
                <value>
                    <fullName>Price Discount</fullName>
                </value>
                <value>
                    <fullName>Free Goods</fullName>
                </value>
                <value>
                    <fullName>Animations</fullName>
                </value>
                <value>
                    <fullName>Sampling</fullName>
                </value>
                <value>
                    <fullName>Buy &amp; Get</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Live promo</fullName>
                </value>
                <value>
                    <fullName>Tasting/Welcome Drink</fullName>
                </value>
                <value>
                    <fullName>Sponsored Events</fullName>
                </value>
                <value>
                    <fullName>Combo pack</fullName>
                </value>
                <value>
                    <fullName>Second Point of Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Retail_Selling_Price__c</fullName>
        <label>Retail Selling Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Secondary_Placement__c</fullName>
        <label>Secondary Placement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sub_Promotion_Type__c</fullName>
        <label>Sub Promotion Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>EUR_CRM_Promotion_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Poster</fullName>
                </value>
                <value>
                    <fullName>Red Tag</fullName>
                </value>
                <value>
                    <fullName>Leaflet</fullName>
                </value>
                <value>
                    <fullName>Pallet zone</fullName>
                </value>
                <value>
                    <fullName>Gondola end</fullName>
                </value>
                <value>
                    <fullName>Cashier desk</fullName>
                </value>
                <value>
                    <fullName>Display</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Supplier_Competitor__c</fullName>
        <label>Supplier/Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Conaxess</fullName>
                </value>
                <value>
                    <fullName>Diageo</fullName>
                </value>
                <value>
                    <fullName>Edrington</fullName>
                </value>
                <value>
                    <fullName>Hans Just</fullName>
                </value>
                <value>
                    <fullName>Hartwa-Trade</fullName>
                </value>
                <value>
                    <fullName>Heinon Tukku</fullName>
                </value>
                <value>
                    <fullName>Hela Wine</fullName>
                </value>
                <value>
                    <fullName>Inex</fullName>
                </value>
                <value>
                    <fullName>Just Drinks</fullName>
                </value>
                <value>
                    <fullName>Marie Brizard</fullName>
                </value>
                <value>
                    <fullName>Möet Hennessy</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Sprit &amp; Co.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Competitor Promo Tracking (EU)</label>
    <listViews>
        <fullName>EUR_BE_CPT</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account_Name__c</columns>
        <columns>EUR_CRM_Competitor_Product__c</columns>
        <columns>EUR_CRM_Promotion_Name__c</columns>
        <columns>EUR_CRM_Promotion_Type__c</columns>
        <columns>EUR_CRM_Retail_Selling_Price__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Competitor_Promo_Tracking__c.EUR_BE_Off_Trade_CPT,EUR_CRM_Competitor_Promo_Tracking__c.EUR_BE_On_Trade_CPT</value>
        </filters>
        <label>All BE CPT</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_BG_All_CompetitorPromoTracking_View</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Account_Name__c</columns>
        <columns>EUR_CRM_Active__c</columns>
        <columns>EUR_CRM_Start_Date__c</columns>
        <columns>EUR_CRM_End_Date__c</columns>
        <columns>EUR_CRM_Promotion_Name__c</columns>
        <columns>EUR_CRM_Promotion_Type__c</columns>
        <columns>EUR_CRM_Sub_Promotion_Type__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Competitor_Promo_Tracking__c.EUR_BG_On_Trade_CPT</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Competitor_Promo_Tracking__c.EUR_BG_Off_Trade_CPT</value>
        </filters>
        <label>EUR BG All CompetitorPromoTracking View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_MA_CPT</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account_Name__c</columns>
        <columns>EUR_CRM_Active__c</columns>
        <columns>EUR_CRM_Competitor_Product__c</columns>
        <columns>EUR_CRM_End_Date__c</columns>
        <columns>EUR_CRM_Impact_to_PR_Brands__c</columns>
        <columns>EUR_CRM_Promotion_Name__c</columns>
        <columns>EUR_CRM_Promotion_Type__c</columns>
        <columns>EUR_CRM_Note__c</columns>
        <columns>EUR_CRM_Start_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Competitor_Promo_Tracking__c.EUR_MA_Off_Trade_CPT,EUR_CRM_Competitor_Promo_Tracking__c.EUR_MA_On_Trade_CPT</value>
        </filters>
        <label>EUR MA CPT</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_MA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_ZA_CPT</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account_Name__c</columns>
        <columns>EUR_CRM_Active__c</columns>
        <columns>EUR_CRM_Competitor_Product__c</columns>
        <columns>EUR_CRM_End_Date__c</columns>
        <columns>EUR_CRM_Impact_to_PR_Brands__c</columns>
        <columns>EUR_CRM_Promotion_Name__c</columns>
        <columns>EUR_CRM_Promotion_Type__c</columns>
        <columns>EUR_CRM_Note__c</columns>
        <columns>EUR_CRM_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Competitor_Promo_Tracking__c.EUR_ZA_Off_Trade_CPT,EUR_CRM_Competitor_Promo_Tracking__c.EUR_ZA_On_Trade_CPT</value>
        </filters>
        <label>EUR ZA CPT</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_ZA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CPT-{00000000}</displayFormat>
        <label>CPT Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Promo Tracking (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_BE_Off_Trade_CPT</fullName>
        <active>true</active>
        <label>EUR BE Off Trade CPT</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_On_Trade_CPT</fullName>
        <active>true</active>
        <label>EUR BE On Trade CPT</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Off_Trade_CPT</fullName>
        <active>true</active>
        <label>EUR BG Off Trade CPT</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_On_Trade_CPT</fullName>
        <active>true</active>
        <label>EUR BG On Trade CPT</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CPT_AO</fullName>
        <active>true</active>
        <label>EUR CPT AO</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CPT_EE</fullName>
        <active>true</active>
        <label>EUR CPT EE</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CPT_KE</fullName>
        <active>true</active>
        <label>EUR CPT KE</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CPT_LT</fullName>
        <active>true</active>
        <label>EUR CPT LT</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CPT_LV</fullName>
        <active>true</active>
        <label>EUR CPT LV</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_OFF_Trade_CPT</fullName>
        <active>true</active>
        <description>Record Type for DK Competitor Promo Tracking</description>
        <label>EUR DK OFF Trade CPT</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_ON_Trade_CPT</fullName>
        <active>true</active>
        <description>Record Type for DK ON Trade CPT</description>
        <label>EUR DK ON Trade CPT</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_MA_Off_Trade_CPT</fullName>
        <active>true</active>
        <label>EUR MA Off Trade CPT</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_MA_On_Trade_CPT</fullName>
        <active>true</active>
        <label>EUR MA On Trade CPT</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NG_Off_Trade_CPT</fullName>
        <active>true</active>
        <label>EUR NG Off Trade CPT</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NG_On_Trade_CPT</fullName>
        <active>true</active>
        <label>EUR NG On Trade CPT</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Off_Trade_CPT</fullName>
        <active>true</active>
        <label>EUR RU Off Trade CPT</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_On_Trade_CPT</fullName>
        <active>true</active>
        <label>EUR RU On Trade CPT</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_Off_Trade_CPT</fullName>
        <active>true</active>
        <label>EUR ZA Off Trade CPT</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_On_Trade_CPT</fullName>
        <active>true</active>
        <label>EUR ZA On Trade CPT</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>EUR_CRM_Check_Start_Date_End_Date</fullName>
        <active>true</active>
        <description>If Start_Date &lt;&gt; null &amp;&amp; End_Date &lt;&gt; null
then check End_Date cannot be earlier than Start_Date</description>
        <errorConditionFormula>AND( NOT( ISBLANK( EUR_CRM_Start_Date__c ) ), NOT( ISBLANK( EUR_CRM_End_Date__c ) ), EUR_CRM_End_Date__c &lt; EUR_CRM_Start_Date__c)</errorConditionFormula>
        <errorDisplayField>EUR_CRM_End_Date__c</errorDisplayField>
        <errorMessage>End Date cannot be earlier than Start Date</errorMessage>
    </validationRules>
</CustomObject>